--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.64 1999-12-18 04:31:35 satoru Exp $
+dnl $Id: configure.in,v 1.65 1999-12-19 04:21:33 satoru Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -430,24 +430,25 @@ AC_OUTPUT([Makefile
 	   pl/conf.pl
 	   po/Makefile.in
 	   po/make_jis7_po
+	   scripts/Makefile 
+	   scripts/mknmz.pl
+	   scripts/gcnmz.pl
+	   scripts/gtnmz
+	   scripts/vfnmz
+	   scripts/kwnmz.pl
+	   scripts/mailutime
+	   scripts/nmzgrep
 	   src/Makefile 
-	   src/mknmz.pl
-	   src/gcnmz.pl
-	   src/gtnmz
-	   src/vfnmz
-	   src/kwnmz.pl
-	   src/mailutime
-	   src/nmzgrep
 	   template/NMZ.head
 	   template/NMZ.foot
 	   template/NMZ.head.ja_JP.JIS7
 	   template/NMZ.foot.ja_JP.JIS7
 	  ],
 	  [chmod +x nmz-config \
-		    src/gtnmz \
-		    src/mailutime \
-		    src/nmzgrep \
-		    src/vfnmz \
+		    scripts/gtnmz \
+		    scripts/mailutime \
+		    scripts/nmzgrep \
+		    scripts/vfnmz \
 		    po/make_jis7_po]) 
 
 # Local Variables:
