--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -33,3 +33,14 @@ SUFFIXES = .pl
 	    -e 's!%TEMPLATEDIR%!$(templatedir)!g' \
 	$< > $@
 	chmod +x $@
+
+#tags: TAGS
+#TAGS:  $(SCRIPTS) $(TAGS_DEPENDENCIES) $(LISP)
+#	tags=; \
+#	here=`pwd`; \
+#	list='$(SCRIPTS)'; \
+#	unique=`for i in $$list; do echo $$i; done | \
+#	  awk '    { files[$$0] = 1; } \
+#	       END { for (i in files) print i; }'`; \
+#	test -z "$(ETAGS_ARGS)$$unique$(LISP)$$tags" \
+#	  || (cd $(srcdir) && etags $(ETAGS_ARGS) $$tags  $$unique $(LISP) -o $$here/TAGS)
