--- a/scripts/bnamazu.in
+++ b/scripts/bnamazu.in
@@ -2,7 +2,7 @@
 # -*- Perl -*-
 #
 # bnamazu -- search with "namazu" and browse its results with a web browser.
-# $Id: bnamazu.in,v 1.3 1999-12-20 23:23:31 satoru Exp $
+# $Id: bnamazu.in,v 1.4 1999-12-24 08:35:36 satoru Exp $
 # 
 # Copyright (C) 1998 Hajime BABA. All rights reserved.
 #
@@ -42,6 +42,7 @@ main();
 
 sub main {
     my @args = parse_options();
+    @args = map {"'$_'"} @args;
 
     my $results_html = "";
     if ($browser =~ /netscape/) {
