--- a/scripts/mknmz.pl.in
+++ b/scripts/mknmz.pl.in
@@ -1,7 +1,7 @@
 #! @PERL@ -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.pl.in,v 1.1 1999-12-19 04:19:58 satoru Exp $
+# $Id: mknmz.pl.in,v 1.2 1999-12-27 13:05:30 satoru Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi  All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -62,6 +62,7 @@ my $Magic = new File::MMagic;
 my $scanned = 0 ; # total number scanned by find_targets()
 
 STDOUT->autoflush(1);
+STDERR->autoflush(1);
 main();
 sub main () {
     my $start_time = time;
@@ -100,6 +101,8 @@ sub main () {
 	    $flist_ptr += length($line);
 	    my $cfile = $line;
 	    chomp $cfile;
+	    util::dprint("target file: $cfile\n");
+
 	    my $cfile_size = namazu_core($cfile, $file_count, $file_base, 
 				 \%field_indices, $fh_errorsfile);
 	    next unless $cfile_size;
