--- a/filter/Makefile.am
+++ b/filter/Makefile.am
@@ -1,4 +1,6 @@
-AUTOMAKE_OPTIONS = no-dependencies
+## Process this file with automake to produce Makefile.in
+
+AUTOMAKE_OPTIONS = 1.4 no-dependencies
 
 filterdir = $(pkgdatadir)/filter
 
@@ -18,4 +20,7 @@ filter_DATA = bzip2.pl \
 	     oleexcel.pl \
 	     olepowerpoint.pl \
 	     ichitaro456.pl
+
 EXTRA_DIST = $(filter_DATA)
+
+ETAGS_ARGS = $(filter_DATA) --lang=perl
