* pl/conf.pl.in: Add ".*\.tex" to $ALLOW_REGEX.
	* scripts/mknmz.pl.in (load_modules): Remove:
	unshift @INC, "../filter"; Because it's useless.

	* filter/Makefile.am (filter_DATA): Add tex.pl

	* filter/tex.pl: New file. (derivated from pdf.pl)

	* scripts/mknmz.pl.in (setup_magic): Add settings for TeX .

--- a/filter/Makefile.am
+++ b/filter/Makefile.am
@@ -19,7 +19,8 @@ filter_DATA = bzip2.pl \
 	     olemsword.pl \
 	     oleexcel.pl \
 	     olepowerpoint.pl \
-	     ichitaro456.pl
+	     ichitaro456.pl \
+	     tex.pl
 
 EXTRA_DIST = $(filter_DATA)
 
