* man/Makefile.am (update-man): Fix mknmz's pathname. 	Replace " FSF$$" with "Namazu" in man files.

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -4,6 +4,9 @@ man_MANS = namazu.1 mknmz.1
 EXTRA_DIST = $(man_MANS)
 
 update-man:
-	LANG=C help2man --no-info ../src/namazu > namazu.1
-	LANG=C help2man --no-info ../src/mknmz > mknmz.1
+	LANG=C help2man --no-info ../src/namazu | \
+               perl -pe 's/ FSF$$/Namazu/' > namazu.1
+
+	LANG=C help2man --no-info ../scripts/mknmz | \
+	       perl -pe 's/ FSF$$/Namazu/' > mknmz.1
 
