* filter/tex.pl (filter): Use \title{foo}, \author{bar}, 	\begin{abstract} ... \end{abstract} information if available.
	* scripts/mknmz.pl.in (put_field_index): Use MAX_FIELD_LENGTH to
	limit a field string.
	(make_summary): Ditto.

	* pl/conf.pl.in: s/SUMMARY_LENGTH/MAX_FIELD_LENGTH/
	Add comments on MAX_FIELD_LENGTH.

	* scripts/mknmz.pl.in (load_modules): Use ../filter/*.pl if
	exists. (for developing use)
	(load_modules): Allow `-' in a filter file name.
	(load_modules): Restore unshift @INC, "../filter".

--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -143,8 +143,12 @@ $NON_SEPARATION_ELEMENTS = 'A|TT|CODE|SAMP|KBD|VAR|B|STRONG|I|EM|CITE|FONT|U|'.
 
 $INVALID_LENG = 128; 
 
-## Length of a summary
-$SUMMARY_LENGTH = 200;
+################################################################
+##
+## Max length of a field
+## This MUST be smaller than libnamazu.h's BUFSIZE (1024).
+##
+$MAX_FIELD_LENGTH = 200;
 
 
 ################################################################
